# Rust-OpenGL-Spherical-Harmonics

./: Cargo.toml  README.md
assets/models/: res.ply  res2.ply
assets/shaders/: model.frag  model.vert  triangle.frag  triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: main.rs  ply_model.rs  render_gl.rs  resources.rs  triangle.rs
src/render_gl/: buffer.rs  data.rs  mod.rs  shader.rs
