[package]
name = "spherical_harmonics"
version = "0.1.0"
authors = ["JonFreer <j.freer@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.3", features = ["bundled", "static-link"] }
gl = {path = "lib/gl" }
failure = "0.1"
render_gl_derive = {path="render_gl_derive"}
ply-rs = "0.1.3"
png = "0.16.8"
structopt = "0.3.13"
rand = "0.8.3"

[features]
gl_debug = ["gl/debug"]

[build-dependencies]
walkdir = "2.1"